welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:1: error: Missing closing brace `}' assumed here
def Brosse() {
^MethodsPictureLarge:1: error: expected class or object definition
def Brosse() {
^MethodsPictureLarge:4: error: expected class or object definition
def faireV(c:Color) {
^MethodsPictureLarge:13: error: expected class or object definition
def fairecarre() {
^MethodsPictureLarge:17: error: expected class or object definition
def faireligne() {
^MethodsPictureLarge:22: error: expected class or object definition
def faireMotif() {
^MethodsPictureLarge:28: error: expected start of definition
override def run() {
         ^